gccida/g0/canon_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/canon_rtx/src/alias.c:1522:41: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( x0 == x->fld[0].rtx && x1 == ( rtx)x[1] ) 
                                        ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/canon_rtx/src/alias.c:1528:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x0, x1); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/canon_rtx/src/obj/alias.o] Error 1
